syntax = "proto3";

option go_package = "github.com/shota-aa/grpc-pr/pb/user";

import "google/protobuf/timestamp.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (User) {}
}

message GetUserRequest {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;

  google.protobuf.Timestamp updated_at = 14;
}